<resources>
    <string name="start_location">start location</string>
    <string name="end_location">End Location</string>
    <string name="ride">Ride Detail</string>
    <string name="main_activity_match_not_found_message">Could not find any ride. Try again later</string>
    <string name="app_name">Passenger</string>
    <string name="create_ride">Create Ride</string>
    <string name="create_ride_request">Request Ride</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="driver_confirmation_share_your_ride">This person wants to share your ride</string>
    <string name="driver_confirmation_drive_cost">18,50 kr</string>
    <string name="driver_confirmation_passenger_name">Nicolas Cage</string>
    <string name="driver_confirmation_decline">Decline</string>
    <string name="driver_confirmation_accept">Accept</string>
    <string name="driver_confirmation_start_position">Dockplatsen 14</string>
    <string name="driver_confirmation_end_position">Dockplatsen 16</string>
    <string name="must_implement_confirmation_listener">Must implement ConfirmationListener</string>
    <string name="must_implement_passenger_notification_listener">Must implement passenger notification listener</string>
    <string name="content_description_passenger_thumbnail">Passenger thumbnail</string>
    <string name="content_description_start_location_icon">Start location icon</string>
    <string name="content_description_end_location_icon">End location icon</string>
    <string name="content_description_three_vertical_dots">Three vertical dots</string>
    <string name="passenger_notification_name">John Travolta</string>
    <string name="passenger_notification_car_model">Volvo XC90</string>
    <string name="passenger_notification_eta_title">ETA</string>
    <string name="passenger_notification_price_title">PRICE</string>
    <string name="passenger_notification_eta">4m</string>
    <string name="passenger_notification_price">%1$.1f</string>
    <string name="passenger_notification_license_plate">ABC 123</string>
    <string name="passenger_notification_cancel">Cancel</string>
    <string name="content_description_passenger_notification_thumbnail">Passenger notification thumbnail</string>
    <string name="finding_car_info">Searching for a car…</string>
    <string name="finding_driver_cancel">Cancel</string>
    <string name="must_implement_finding_car_listener">Must implement FindingCarListener</string>
    <string name="finding_car_price">Price: %1$.1f</string>
    <string name="create_drive_cancel">Cancel</string>
    <string name="security">Security</string>
    <string name="mail_example">luftluft@mail.com</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="add_car">Add Car</string>
    <string name="send_me_password">Send me password</string>
    <string name="we_sent_password_to">We sent password to</string>
    <string name="open_mail_client">Open mail client</string>
    <string name="dialog_create_drive_header">Create Ride</string>
    <string name="dialog_request_drive_header">Request Ride</string>
    <string name="signup_title">Sign Up</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="full_name">Full name</string>
    <string name="personal_number">Personal number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="hint_full_name">Enter name</string>
    <string name="hint_personal_number">8310263388</string>
    <string name="hint_email">my@email.com</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_phone">12345</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="toast_enter_email_password">Please enter email and password to login</string>
    <string name="toast_incorrect_email_password">You have entered an incorrect email or an invalid password</string>
    <string name="toast_forgot_password_incorrect_email">You have entered an incorrect email</string>
    <string name="toast_send_forgot_password_email">You haven\'t entered any email</string>
    <string name="toast_could_not_create_user">Could not create user</string>
    <string name="toast_badly_formatted_email">Badly formatted email or to short password (min 6 characters)</string>
    <string name="login_title">Login</string>
    <string name="mainactivity_title">Passenger</string>
    <string name="select_image_source">Select image source</string>
    <string name="library">Library</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    <string name="desc_male_icon">Male Icon</string>
    <string name="desc_female_icon">Female Icon</string>
    <string name="desc_profile_picture">Profile picture</string>
    <string name="please_enter_an_email">Please enter an email</string>
    <string name="email_address_is_already_in_use_by_another_account">Email address is already in use by another account</string>
    <string name="the_email_is_badly_formatted">The email is badly formatted</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="the_given_password_is_invalid">The given password is invalid. [Password should be at least 6 characters]</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_personal_number">Please enter your personal number</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string-array name="location_array">
        <item>My Location</item>
        <item>Malmö</item>
        <item>Helsingborg</item>
        <item>Stockholm</item>
        <item>Göteborg</item>
    </string-array>
    <string-array name="location_value">
        <item></item>
        <item>55.604981,13.003822</item>
        <item>56.046467,12.694512</item>
        <item>59.329323,18.068581</item>
        <item>57.708870,11.974560</item>
    </string-array>
    <string name="create_drive_right_now">Right now</string>
    <string name="create_drive_time">Time</string>
    <string name="create_drive_default_passengers">4</string>
    <string name="create_drive_passengers_title">PASSENGERS</string>
    <string name="create_drive_available_seats">Available seats</string>
    <string name="create_ride_content_description_remove_passenger">remove passenger</string>
    <string name="create_ride_content_description_add_passenger">add passenger</string>
    <string name="marker_title_you_are_here">You are here</string>
    <string name="marker_title_start_location">Start location</string>
    <string name="marker_title_end_location">Destination</string>
    <string name="marker_title_passenger">Passenger</string>
    <string name="location_provider_marker_drag">MarkerDrag</string>
    <string name="create_drive_find_ride">Find ride</string>
    <string name="create_drive_destination">destination</string>
    <string name="must_implement_on_place_icon_click_listener">You must implement on place marker icon click listener</string>
    <string name="create_drive_time_selected">time</string>
    <string name="title_activity_cars">CarsActivity</string>
    <string name="car_number_hint">QEG 452</string>
    <string name="car_number">Car number</string>
    <string name="car_model_hint">Mazda X6</string>
    <string name="car_model">Model</string>
    <string name="car_year_hint">2008</string>
    <string name="car_year">Year</string>
    <string name="car_color_hint">Black</string>
    <string name="car_color">Color</string>
    <string name="save">Save</string>
    <string name="car_number_error">Car registration number cannot be empty</string>
    <string name="car_number_invalid">Car registration number is not valid</string>
    <string name="car_model_error">Car model name cannot be empty</string>
    <string name="car_year_error">Car built year cannot be empty</string>
    <string name="car_year_invalid">Car built year cannot be greater than current year</string>
    <string name="car_color_error">Car color cannot be empty</string>
    <string name="add_new_car">Add new car</string>
    <string name="numbers">0123456789</string>
    <string name="deleteConfirmation">Delete this car ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="car_base_url">https://api.biluppgifter.se/api/v1/vehicle/regno/</string>
    <string name="car_api_token">Dr1rKMm2eLgYKg4G1v1Xl0EEF30qeVHb9IZ5Ubji7HolwiCDwDfUZ2HVogo5</string>
    <string name="account_label">You need to add a credit card or bank account. You need it to withdraw money</string>
    <string name="bank_account"> Bank account </string>
    <string name="credit_card"> Credit Card </string>
    <string name="card_number">Card Number</string>
    <string name="card_number_text_hint">8989 4732 3747 5702</string>
    <string name="expires">Expires</string>
    <string name="expires_hint">05/19</string>
    <string name="security_code">Security code</string>
    <string name="security_code_hint">573</string>
    <string name="full_name_hint">Kristofor Cheban</string>
    <string name="number_of_bank_account">Number of Bank Account</string>
    <string name="number_of_bank_account_hint">3432 4325 4454 5632 2054</string>
    <string name="card_digits">19</string>
    <string name="bank_digits">24</string>
    <string name="code_digits">3</string>
    <string name="expiry_digits">5</string>
    <string name="card_number_error">Card number cannot be empty</string>
    <string name="expiry_error">Card expiry cannot be empty</string>
    <string name="code_error">Card code cannot be empty</string>
    <string name="account_name_error">Account name cannot be empty</string>
    <string name="account_number_error">Account number cannot be empty</string>
    <string name="signup_type">type</string>
    <string name="signup_passenger">passenger</string>
    <string name="signup_driver">driver</string>
    <string name="signup_login">login</string>
    <string name="signup_userid">userid</string>
    <string name="register_as_title">Register as</string>
    <string name="year_length">4</string>
    <string name="car_length">7</string>
    <string name="fragment_driver_pick_up_time_to_go">Time to go</string>
    <string name="fragment_driver_pick_up_count_down_text">00:15</string>
    <string name="fragment_driver_pick_up_button_text_pick_up">Confirm pick up</string>
    <string name="fragment_driver_pick_up_passenger_name">Alice Hicks</string>
    <string name="fragment_driver_pick_up_button_text_no_show">No show</string>
    <string name="fragment_driver_pick_up_passenger_image_content_description">Profile image</string>
    <string name="fragment_driver_drop_off_title">Did you drop off %1$s?</string>
    <string name="fragment_driver_drop_off_passenger_image_content_description">Passenger image</string>
    <string name="fragment_driver_drop_off_passenger_name">Alice Hicks</string>
    <string name="fragment_driver_drop_off_button_text_confirm">Confirm drop off</string>
    <string name="fragment_driver_drop_off_button_text_cancel">Cancel</string>
    <string name="find_car">Find</string>
    <string name="place_start_marker_information_text">Place start location with a long press on the map</string>
    <string name="place_end_marker_information_text">Place end location with a long press on the map</string>
    <string name="must_implement_on_show_and_hide_click_listener">Must implement on show and hide click listener</string>
    <string name="fragment_no_match_we_didnt_find_anything">We didn’t find anything</string>
</resources>